--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 { 
- "name": "WebbionsWorld/WebbionsWorld",
+ "name": "webbions-world/webbions-world",
     "type": "library",
     "description": "Logging for PHP 5.3",
     "keywords": ["log","logging"],
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Monolog": "src"
+            "webbions-world": "src"
         }
     }
 }    
